fixed buttons on ios

--- a/src/ControlButtons.css
+++ b/src/ControlButtons.css
@@ -64,7 +64,6 @@
     background-color: transparent;
     margin: 0;
     color: black;
-    background-color: rgb(171, 192, 155);
     height: auto;
     width: auto;
     padding: 3px;
